--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
 
+* {
+    font-family: 'QuickSand', sans-serif;
+    color: var(--white);
+}
+
 :root {
     --background: #262626;
+    --dark-background: #202020;
     --secondary-color: #385170;
     --blue: #9fd3c7;
+    --grey: #cfcfcf;
+    --checked-item-text: #6f6f6f;
+    --dark-grey: #b9b9b9;
     --white: #ececec;
 }
 
@@ -13,24 +22,23 @@ body {
 }
 
 #content {
-    /* display: flex; */
+    display: flex;
     justify-content: flex-start;
     height: 100vh;
+
 }
 
 header {
     display: flex;
     width: 100%;
-    height: 100%;
     background-color: var(--secondary-color);
     color: var(--white);
 }
 
 #title {
     text-align: left;
-    font-family: 'QuickSand', sans-serif;
     font-size: 4em;
-    font-weight: 700;
+    font-weight: 900;
     width: 50%;
     padding-top: 1%;
     padding-bottom: 1%;
@@ -50,4 +58,80 @@ header {
     height: 100%;
     width: 300px;
     background-color: #202020;
+}
+
+#main {
+    width: 100%;
+    padding: 1% 3% 1% 3%;
+}
+
+.project-title {
+    font-size: 3em;
+    font-weight: bold;
+    padding: 1%;
+}
+
+.list {
+    width: 80%;
+    background-color: var(--white);
+    border-radius: 15px;
+    padding: 1.5%
+}
+
+.item {
+    background-color: var(--grey);
+    font-size: 1.3em;
+    font-weight: 700;
+    padding: 1%;
+    border-radius: 10px;
+}
+
+.item:hover {
+    background-color: var(--dark-grey);
+}
+
+.item-title {
+    color: var(--dark-background);
+    font-size: 1.3em;
+    font-weight: 700;
+}
+
+.item-checked {
+    text-decoration: line-through;
+    color: var(--checked-item-text);
+}
+
+.checkbox {
+    color: var(--dark-background);
+    padding: 0 1% 0 0;
+}
+
+.checkbox:hover {
+    cursor: pointer;
+}
+
+.info {
+    width: 50%;
+    float: right;
+    color: var(--dark-background);
+    text-align: right;
+}
+
+.info > * {
+    padding: 1.5%;
+    color: var(--dark-background);
+    font-size: .8em;
+    cursor: pointer;
+}
+
+.edit:hover {
+    color: grey;
+}
+
+.delete {
+    color: rgb(209, 1, 1);
+}
+
+.delete:hover {
+    color: rgb(165, 0, 0);
 }
